2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: we trigger the
	"caldav-component-acl-loaded" or "caldav-component-acl-reset" to
	notify observers that the event entries are ready.

2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendar-event-dialog.xul:
	fix the privacy label of the privacy statusbar item.

2009-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
	don't enable the "new items" buttons when the selected calendar is
	marked as read-only.

2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: we pass the url of the calendar as data
	argument on every request, for error management. For errors >= 498,
	we remove the entry but for errors > 399, we keep it and mark it
	as lacking ACL support.

2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger a "caldav-acl-reset"
	notification where the status code returned by the server is >
	399. This enables listeners to take action when the request chain
	is aborted.

2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: trigger the "caldav-acl-loaded"
	notification only when the second address set is received.

2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js,
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	save preferences as soon as a list has been modified to avoid
	duplication when a crash occurs.

2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	it may happen that we are returned a card we already have "as new"
	and with a different version number than the one we have. In and
	only in that case, we update the card/list so that we don't lose
	updates.